
SET (<<PROJECT_NAME>>_COOKERS_SOURCES
  <<PROJECT_NAME>>_cookers.cpp
  )

MSVC_PRECOMPILED_HEADER (<<PROJECT_NAME>>_cookers <<PROJECT_NAME>>_COOKERS_SOURCES)
IDE_SOURCE_PROPERTIES( "/" "${<<PROJECT_NAME>>_COOKERS_SOURCES}")

ADD_LIBRARY (<<PROJECT_NAME>>_cookers
  ${<<PROJECT_NAME>>_COOKERS_SOURCES}
  )
